About us text changes

--- a/styles.css
+++ b/styles.css
@@ -700,7 +700,7 @@ body.menu-open #sideMenu {
 }
 
 .bb-link:hover {
-  color: #ccc; /* ili neka svetlija nijansa da da "hover" efekat */
+  color: #ccc; /
 }
 
 /* PICTURES */
