--- a/styles.css
+++ b/styles.css
@@ -647,7 +647,7 @@ body.menu-open #sideMenu {
   display: flex;
   flex-direction: column;
   justify-content: space-between; /* This arranges the top and bottom section */
-  gap: 1.5rem;
+  gap: 0.5rem;
   background-color: #24232373;
   /* padding: 1rem; */
   border-radius: 8px;
@@ -682,7 +682,7 @@ body.menu-open #sideMenu {
 }
 .about-box.about-image {
   padding: 0;
-  margin-top: auto; /* Push the image to the bottom of the column */
+  margin-top: 0; 
 }
 
 /* TEXT */
@@ -1800,7 +1800,7 @@ body.menu-open #sideMenu {
   justify-content: center;
   align-items: center;
   margin-top: 2rem;
-  margin-bottom: 0.5rem;
+  margin-bottom: 0.2rem;
   width: 100%;
 }
 
